<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="57dp">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6b3e01"
    tools:context=".ui.dashboard.DashboardFragment"
    >

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="178dp"
        android:layout_height="47dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded"
        android:fontFamily="@font/avenir_black"
        android:padding="10dp"
        android:shadowColor="#000"
        android:shadowDx="-2"
        android:shadowDy="-2"
        android:shadowRadius="1"
        android:text="@string/about"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="231dp"
        android:layout_height="153dp"
        android:layout_marginTop="96dp"
        android:layout_marginStart="-40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="235dp"
        android:layout_height="112dp"
        android:layout_marginTop="200dp"
        android:fontFamily="@font/avenir_black"
        android:justificationMode="inter_word"
        android:text="has the ability to identify if a roasted coffee bean is normal or has a defect and if it is defective, it can classify the type of roasted coffee bean defects."
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="280dp"
        android:layout_height="178dp"
        android:layout_marginEnd="-120dp"
        android:layout_marginTop="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/roasted" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="280dp"
        android:layout_height="178dp"
        android:layout_marginStart="-120dp"
        android:layout_marginTop="292dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/roasted" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="236dp"
        android:layout_height="161dp"
        android:layout_marginTop="292dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/girl_1" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="326dp"
        android:layout_height="101dp"
        android:layout_marginTop="492dp"
        android:fontFamily="@font/avenir_roman"
        android:justificationMode="inter_word"
        android:text="@string/boldCOPIC"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="331dp"
        android:layout_height="1315dp"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/topology"
        />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="326dp"
        android:layout_height="398dp"
        android:layout_marginTop="1100dp"
        android:fontFamily="@font/avenir_roman"
        android:justificationMode="inter_word"
        android:text="   This includes the dataset which are the images gathered by the researchers, and in order to multiply it for more accurate results, the researchers augmented the datasets, which creates different varieties of images, this includes the brightness, the zoom in/zoom out of the picture, and even the rotation of the image. After the augmentation, the researchers started to train a pre-trained model, the pre-trained model comes from the TensorFlow library which is from the cloud, and this model is imported into a programming editor or python editor which is the jupyter notebook. The Jupyter Notebook serves as the platform for training the pre-trained model. Once exported, it will be a .tf file, it isn't still usable due to the extensiveness of the file for the android platform and Android Studio as well. Hence, the .tf file is converted into .tflite for mobile compatibility, and once this is accomplished, Copic mobile application is created."
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:targetApi="o" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="211dp"
        android:layout_height="126dp"
        android:layout_marginTop="1416dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/start_bean" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="148dp"
        android:layout_height="69dp"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/avenir_black"
        android:text="MEET THE DEVELOPERS"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView21" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="124dp"
        android:layout_height="100dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/dev_castillo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="174dp"
        android:layout_height="59dp"
        android:layout_marginTop="164dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/hannah"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/imageView23"
        app:layout_constraintTop_toBottomOf="@+id/imageView22" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="124dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView23"
        app:srcCompat="@drawable/dev_culla" />

    <ImageView
        android:id="@+id/imageView25"
        android:layout_width="124dp"
        android:layout_height="100dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView24"
        app:srcCompat="@drawable/dev_ebreo" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="174dp"
        android:layout_height="59dp"
        android:layout_marginTop="412dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/ebreo"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/imageView25"
        app:layout_constraintTop_toBottomOf="@+id/imageView22" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="174dp"
        android:layout_height="59dp"
        android:layout_marginTop="288dp"
        android:fontFamily="@font/avenir_black"
        android:text="@string/culla"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toEndOf="@+id/imageView24"
        app:layout_constraintTop_toBottomOf="@+id/imageView22" />

    <ImageView
        android:id="@+id/imageView26"
        android:layout_width="177dp"
        android:layout_height="177dp"
        android:layout_marginTop="1952dp"
        android:layout_marginEnd="-70dp"
        android:rotation="-30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/girl_2" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="147dp"
        android:layout_height="29dp"
        android:layout_marginTop="136dp"
        android:fontFamily="@font/avenir_black"
        android:text="CONTACT US"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView25" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="290dp"
        android:layout_height="181dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/avenir_roman"
        android:text="Kindly email us with any questions or inquiries. We would be happy to assist and answer your questions. For a better vision of the future through leading innovations and transforming lives!  "
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <ImageView
        android:id="@+id/imageView27"
        android:layout_width="720dp"
        android:layout_height="412dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView31"
        app:srcCompat="@drawable/contact_us" />

    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="165dp"
        android:layout_height="83dp"
        android:layout_marginTop="44dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView27"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo3" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="357dp"
        android:layout_height="30dp"
        android:layout_marginTop="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:srcCompat="@drawable/gmail3" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="206dp"
        android:layout_height="26dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/avenir_roman"
        android:text="copic.appteam@gmail.com"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textIsSelectable="true"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView31" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
